--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>StarShop</title>
       <link href="/dist/output.css" rel="stylesheet">
+      <link rel="shortcut icon" href="/src/assets/favicon.png" type="image/x-icon">
 
   </head>
   <body>
